2012.02.05 - version 2.6
	* added: shortcode [sitemap] to leverage the sitemap/archive functionality anywhere
	* changed: the Sitemap Page Template now accepts parameters passed through the Custom Field "sitemap_settings"
	* changed: updated all post image functions to run off a single array or argument string, instead of multiple arguments
	* changed: updated all templates to use get_post_format() and get_post_type() in get_template_part() for post loops. 
	* changed: moved many custom functions out of /includes/functions/custom.php and into task-specific function files.
	* changed: renamed plugins to extensions
	* changed: [date] shortcode now accepts "relative=true" parameter to return a relative date (e.g. 5 hours ago)
	* changed: updated SB Social widget to include Google+ and more gracefully handle output of each network's name
	* changed: passed SB and Theme versions through wp_enqueue_style calls
	* fixed: minor (but annoying) bug introduced in 2.5.4 that prevented sidebar settings from being stored on first save.
	* fixed: bug that would cause the RSS nav menu extra link to use href="true" instead of href="/your/feed/url/"
	* added: /includes/functions/conditionals.php
	* added: /includes/functions/images.php	
	* added: /includes/functions/menus.php	
	* removed: all custom hook functions, replacing them more simply with do_action( 'hook_name' )
	* removed: sb_title() function, since it's only use was having wp_title hooked directly to it
	* removed: page-fullwidth.php (full-width page template) -- use the One Column layout option instead
	* removed: page-tertiarysidebar.php (tertiary sidebar page template ) -- use sidebar manager instead
	* removed: sidebar-tertiary.php (tertiary sidebar) -- use sidebar manager instead
	* removed: built-in Slideshows functionality and dependencies (/includes/scripts/nivo-slider/)

2012.01.31 - version 2.5.6
	* changed: updated [date] shortcode so that you can pass a custom PHP date format (e.g. [date format="Y"])